<resources>
    <string name="app_name">My Weather GU</string>
    <string name="city_name">MOSCOW</string>
    <string name="current_date" translatable="false">01.02.2020</string>
    <string name="currentTemperature" translatable="false">24</string>
    <string name="currentScale" translatable="false">°C</string>
    <string name="mcloudy">mcloudy</string>
    <string name="monTemp" translatable="false">24</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
    <string name="tue">TUE</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="thu">THU</string>
    <string name="wed">WED</string>
    <string name="img_desc_mondey">pcloudy</string>
    <string name="img_desc_tuesday">img_desc_tuesday</string>
    <string name="img_desc_wednesday">pcloudy</string>
    <string name="img_desc_thursdey">mcloudy</string>
    <string name="img_desc_friday">mcloudy</string>
    <string name="img_desc_saturday">storm</string>
    <string name="img_desc_sunday">sunny</string>
    <string name="suntemp" translatable="false">23</string>
    <string name="satTemp" translatable="false">20</string>
    <string name="tueTemp" translatable="false">23</string>
    <string name="thuTemp" translatable="false">22</string>
    <string name="friTemp" translatable="false">26</string>
    <string name="wedTemp" translatable="false">20</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="select_city_name">Select City Name</string>
    <string name="enter_find_city">Enter Find City</string>
    <string name="find">Find</string>

    <string-array name="city_name">
        <item>Sukhum</item>
        <item>Kabul</item>
        <item>Tirana</item>
        <item>Algiers</item>
        <item>Yerevan</item>
        <item>Canberra</item>
        <item>Vienna</item>
        <item>Baku</item>
        <item>Nassau</item>
        <item>Manama</item>
        <item>Dacca</item>
        <item>Minsk</item>
        <item>Brussels</item>
        <item>Hamilton</item>
        <item>La Paz</item>
        <item>Brasilia</item>
        <item>Sofia</item>
        <item>Bujumbura</item>
        <item>Pnompenh</item>
        <item>Yaounde</item>
        <item>Ottawa</item>
        <item>Santiago</item>
        <item>Peking</item>
        <item>Bogota</item>
        <item>Brazzaville</item>
        <item>San Jose</item>
        <item>Havana</item>
        <item>Nicosia</item>
        <item>Prague</item>
        <item>Copenhagen</item>
        <item>Santo Domingo</item>
        <item>Quito</item>
        <item>Cairo</item>
        <item>San Salvador</item>
        <item>Tallinn</item>
        <item>Addis Ababa</item>
        <item>Helsinki</item>
        <item>Paris</item>
        <item>Tbilisi</item>
        <item>Berlin</item>
        <item>Accra</item>
        <item>Gibraltar Town</item>
        <item>London</item>
        <item>Athens</item>
        <item>Guatemala City</item>
        <item>Conakry</item>
        <item>Port-au-Prince</item>
        <item>Honolulu</item>
        <item>Tegucigalpa</item>
        <item>Hong Kong</item>
        <item>Budapest</item>
        <item>Reykjavik</item>
        <item>New Delhi</item>
        <item>Jakarta</item>
        <item>Tehran</item>
        <item>Baghdad</item>
        <item>Dublin</item>
        <item>Jerusalem</item>
        <item>Rome</item>
        <item>Abidjan</item>
        <item>Kingston</item>
        <item>Tokyo</item>
        <item>Astana</item>
        <item>Nairobi</item>
        <item>Kuwait City</item>
        <item>Bishkek</item>
        <item>Riga</item>
        <item>Beirut</item>
        <item>Monrovia</item>
        <item>Tripoli</item>
        <item>Vilnius</item>
        <item>Luxemburg</item>
        <item>Antananarivo</item>
        <item>Lilongwe</item>
        <item>Kuala Lumpur</item>
        <item>Valletta</item>
        <item>Mexico City</item>
        <item>Chisinau (Kishinev)</item>
        <item>Monaco-Ville</item>
        <item>Ulan Bator</item>
        <item>Rabat</item>
        <item>Kathmandu</item>
        <item>Amsterdam</item>
        <item>Wellington</item>
        <item>Managua</item>
        <item>Lagos</item>
        <item>Pyongyang</item>
        <item>Oslo</item>
        <item>Muscat</item>
        <item>Islamabad</item>
        <item>Panama City</item>
        <item>Port Moresby</item>
        <item>Asuncion</item>
        <item>Lima</item>
        <item>Manila</item>
        <item>Warsaw</item>
        <item>Lisbon</item>
        <item>San Juan</item>
        <item>Bucharest</item>
        <item>Moscow</item>
        <item>Kigali</item>
        <item>Riyadh</item>
        <item>Dakar</item>
        <item>Freetown</item>
        <item>Singapore City</item>
        <item>Bratislava</item>
        <item>Ljubljana</item>
        <item>Pretoria</item>
        <item>Seoul</item>
        <item>Tskhinval</item>
        <item>Madrid</item>
        <item>Colombo</item>
        <item>Khartoum</item>
        <item>Stockholm</item>
        <item>Berne</item>
        <item>Damascus</item>
        <item>Taipei</item>
        <item>Dushanbe</item>
        <item>Bangkok</item>
        <item>Lome</item>
        <item>Tunis</item>
        <item>Ankara</item>
        <item>Ashgabat</item>
        <item>Kampala</item>
        <item>Kyiv (Kiev)</item>
        <item>Abu Dhabi</item>
        <item>Washington</item>
        <item>Montevideo</item>
        <item>Tashkent</item>
        <item>Caracas</item>
        <item>Kinshasa</item>
        <item>Lusaka</item>
        <item>Harare</item>
    </string-array>
</resources>
